--- a/nugu-ios.xcodeproj/xcshareddata/xcschemes/NuguCoreTests.xcscheme
+++ b/nugu-ios.xcodeproj/xcshareddata/xcschemes/NuguCoreTests.xcscheme
@@ -1,40 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1250"
-   version = "1.3">
+   LastUpgradeVersion = "1630"
+   version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
-      buildImplicitDependencies = "YES">
-      <BuildActionEntries>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "73152F9923E0405900F843C3"
-               BuildableName = "NuguAgents.framework"
-               BlueprintName = "NuguAgents"
-               ReferencedContainer = "container:nugu-ios.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-      </BuildActionEntries>
+      buildImplicitDependencies = "YES"
+      buildArchitectures = "Automatic">
    </BuildAction>
    <TestAction
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
+      <TestPlans>
+         <TestPlanReference
+            reference = "container:NuguCoreTests/NuguCoreTests.xctestplan"
+            default = "YES">
+         </TestPlanReference>
+      </TestPlans>
       <Testables>
          <TestableReference
-            skipped = "NO">
+            skipped = "NO"
+            parallelizable = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "E62BF1172DD2D47B0054322D"
-               BuildableName = "NuguAgentsTests.xctest"
-               BlueprintName = "NuguAgentsTests"
+               BlueprintIdentifier = "E62BF1092DD2D4690054322D"
+               BuildableName = "NuguCoreTests.xctest"
+               BlueprintName = "NuguCoreTests"
                ReferencedContainer = "container:nugu-ios.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -57,15 +49,6 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "73152F9923E0405900F843C3"
-            BuildableName = "NuguAgents.framework"
-            BlueprintName = "NuguAgents"
-            ReferencedContainer = "container:nugu-ios.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
